# DangerZoneMapsAPI

./: .gitignore  Procfile  build.sh  db.sqlite3  pyproject.toml  requirements.txt
Backend2/: asgi.py  settings.py  urls.py  wsgi.py
social_auth/: google.py  register.py  serializers.py  urls.py  views.py
user/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_user_auth_provider.py  0003_alter_user_auth_provider_alter_user_email_and_more.py
zone/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
zone/migrations/: 0001_initial.py  0002_zone_name.py  0003_alter_zone_description_alter_zone_name_and_more.py
