[tool.poetry]
name = "adroidmapsbackendapi"
version = "0.1.0"
description = ""
authors = ["VadimKukuzia <vadimol081@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.5"
dj-database-url = "^1.2.0"
psycopg2-binary = "^2.9.5"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
