[tool.poetry]
name = "androidmapsbackendapi"
version = "0.1.0"
description = ""
authors = ["VadimKukuzia <vadimol081@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.5"
dj-database-url = "^1.2.0"
psycopg2-binary = "^2.9.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
